--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "myexpressapp",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+  "name": "full-stack-web-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "backend.js",
+  "type": "module",
+  "scripts": {},
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.6.3",
+    "node": "^21.1.0"
   }
 }
